FIX: align tilbake-til-oppsummeringsknapp

--- a/src/arbeidssøkerskjema/side/Side.less
+++ b/src/arbeidssøkerskjema/side/Side.less
@@ -81,6 +81,7 @@
     margin: 0 auto;
     display: block;
     margin-top: 2rem;
+    max-width: 588px;
   }
 
   .knapp.kvittering {
