--- a/src/barnetilsyn/side/Side.less
+++ b/src/barnetilsyn/side/Side.less
@@ -94,6 +94,7 @@
     margin: 0 auto;
     display: block;
     margin-top: 2rem;
+    max-width: 588px;
   }
 }
 .skjema_lenke {
